# perry

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TASK.md  parity_status.sh  run_parity_tests.sh
crates/perry-ext-iroh/: Cargo.toml
crates/perry-ext-iroh/src/: lib.rs
crates/perry-ffi/: Cargo.toml
crates/perry-ffi/src/: async_runtime.rs  bigint.rs  buffer.rs  closure.rs  event_pump.rs  handle.rs  json.rs  jsvalue.rs  lib.rs  types.rs
docs/: generational-gc-plan.md  runtime-parity-gaps.md  typescript-parity-gaps.md
examples/: issue_583_demo.ts
packaging/: install.sh
scripts/: addr_class_allowlist.txt  check_file_size.sh  compiler_output_regression.py  node_core_subset.py  run_doc_tests.sh  run_memory_stability_tests.sh  run_simctl_tests.sh  test262_subset.py
test-files/: demo_claude_code_tui.ts  run_test_issue_1120.sh  test_722_regress.ts  test_ads_compile_smoke.ts  test_class_static_iife.ts  test_computed_method_call.ts  test_constructor_prototype_method.ts  test_crypto_cipheriv.ts  test_effect_pipe_map.ts  test_fastify_in_process.ts  test_gap_2514_tousvstring.ts  test_gap_2823_2825_2822_promise_semantics.ts  test_gap_3662_function_proto_brand_check.ts  test_gap_3662_node_argvalidation.ts  test_gap_3662_typedarray_length.ts  test_gap_5591_method_string_coercion.ts  test_gap_array_dyndispatch_2803_2808_2791.ts  test_gap_class_expr_extends_static_call_this.ts  test_gap_class_expr_inherited_static_method.ts  test_gap_class_expr_instance_fields.ts  test_gap_class_extends_runtime_value_super.ts  test_gap_class_symbol_async_iterator.ts  (+72 more)
(+1821 files in other folders)
