[package]
name = "perry-ext-iroh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for the Iroh P2P framework — uses only `perry-ffi`. Closes #425. Iroh is a Rust library for direct peer-to-peer QUIC connections with hole punching + relay fallback."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
iroh = "0.98"
tokio = { workspace = true }
