[package]
name = "perry-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stable FFI surface for native bindings packages that wrap Rust crates for Perry. Wrapper authors depend on this; perry-runtime internals stay free to evolve."
repository.workspace = true

[dependencies]
# Normal native package builds must not embed perry-runtime. The optional
# dependency exists only for tests/layout assertions that intentionally link
# against the in-tree runtime.
perry-runtime = { workspace = true, optional = true }

# Handle registry storage (#466 Phase 5 — `lru-cache`/db wrappers).
# perry-stdlib uses dashmap internally for the same purpose; sharing
# the dep keeps the resulting binaries identical in size.
dashmap = "6"
once_cell = "1"

[features]
default = []
runtime-link = ["dep:perry-runtime"]
